added color change on edit button change support

--- a/task-manager/src/styles.css
+++ b/task-manager/src/styles.css
@@ -49,37 +49,57 @@ button:hover {
 
 /* Estilo para el botón de Edit */
 .button-edit {
-    background-color: #f0f0f0; /* Color predeterminado */
-    border: 1px solid #ccc;
-    padding: 8px 16px;
-    cursor: pointer;
+  /* Color predeterminado */
+  background-color: rgba(0, 0, 255, 0.648);
+  color: #fff;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 4px;
+  cursor: pointer;
   }
   
   .button-edit-active {
-    background-color: blue; /* Color azul cuando está activo */
+    background-color: rgba(0, 0, 255, 0.648); /* Color azul cuando está activo */
+    color: white;
+    border: 1px solid rgba(0, 0, 255, 0.648);
+  }
+  
+  .button-edit-active:hover {
+    background-color: rgb(2, 2, 75);
     color: white;
     border: 1px solid blue;
   }
-  
+
   /* Estilo para el botón de Update Task */
   .button-update {
-    background-color: #f0f0f0; /* Color predeterminado */
-    border: 1px solid #ccc;
-    padding: 8px 16px;
-    cursor: pointer;
+   /* Color predeterminado */
+   background-color: #f44;
+   color: #fff;
+   border: none;
+   padding: 5px 10px;
+   border-radius: 4px;
+   cursor: pointer;
   }
   
   .button-update-active {
-    background-color: blue; /* Color azul cuando está activo */
+    background-color: rgba(0, 0, 255, 0.648); /* Color azul cuando está activo */
+    color: white;
+    border: 1px solid rgba(0, 0, 255, 0.648);
+  }
+
+  .button-update-active:hover {
+    background-color: rgb(2, 2, 75);
     color: white;
     border: 1px solid blue;
   }
   
   /* Estilo para el botón de Delete */
   .button-delete {
-    background-color: #e74c3c; /* Color para Delete */
-    color: white;
-    border: 1px solid #c0392b;
-    padding: 8px 16px;
-    cursor: pointer;
+  /* Color para Delete */
+  background-color: #f44;
+  color: #fff;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 4px;
+  cursor: pointer;
   }
